--- a/ascend/css/custom.css
+++ b/ascend/css/custom.css
@@ -71,7 +71,7 @@ img {
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Fjalla One', sans-serif;
 	font-weight: normal;
-	word-spacing: 10px;
+	/*word-spacing: 10px;*/
 	color: #2a2a2a;
 }
 h1 {
@@ -206,8 +206,84 @@ a {
 	clear: both;
 	font-size: 0;
 }
+/* ******************************* FOR INNER HEAD ****************************** */
 
-
+#page_header {
+	width: 100%;
+	padding-top: 30px
+}
+#page_header .left_align_head {
+	text-align: left;
+	padding-bottom: 20px
+}
+#page_header .left_align_head h2 {
+	display: inline-block;
+	margin-left: 30px !important;
+	font-size: 2.5rem;
+	position: relative;
+	color: #323232;
+	text-transform: uppercase;
+}
+#page_header .left_align_head h2:before {
+	content: '';
+	position: absolute;
+	bottom: -12px;
+	left: 0;
+	width: 96%;
+	height: 6px;
+	/*background: url(../images/h2_after.png) left top no-repeat;*/
+	background: #1b75bc;
+}
+#page_header .head_right_part {
+	width: 75%;
+	float: right;
+}
+#page_header .left_align_head h2:after {
+	background: url(../images/header_divider_end.png) left top no-repeat;
+	width: 42px;
+	height: 6px;
+	position: absolute;
+	content: '';
+	right: -28px;
+	bottom: -12px;
+}
+h2.partical_bothside {
+	display: inline-block;
+	margin-left: 0 !important;
+	font-size: 2.5rem;
+	position: relative
+}
+h2.partical_bothside:before {
+	width: 100% !important;
+	background: #1b75bc !important;
+	margin-left: 0;
+	height: 6px;
+	content: '';
+	display: block;
+	left: 0;
+	bottom: -12px;
+	top: inherit !important;
+	position: absolute
+}
+h2.partical_bothside:after {
+	right: -42px !important;
+	background: url(../images/header_divider_end.png) left top no-repeat !important;
+	width: 42px !important;
+	height: 6px !important;
+	position: absolute;
+	content: '';
+	top: inherit;
+	bottom: -12px;
+}
+h2.partical_bothside span {
+	background: url(../images/hading-saprater-left.png) no-repeat left center;
+	width: 42px;
+	height: 6px;
+	display: block;
+	position: absolute;
+	left: -42px;
+	bottom: -12px
+}
 
 
 /*===============================================================
@@ -234,7 +310,7 @@ common portion end
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 99;
+	z-index: 9999;
 	left: 0;
 	-webkit-transition: height 0.3s;
 	-moz-transition: height 0.3s;
@@ -588,7 +664,7 @@ a.btn-get-started:after {
 }
 .main_nav_area nav ul li a {
 	display: block;
-	padding: 28px 12px;
+	padding: 28px 18px;
 	color: #1b1b1b;
 	font-family: 'Lato', sans-serif;
 	text-transform: uppercase;
@@ -689,37 +765,9 @@ a.btn-get-started:after {
 	right: 98px;
 }
 /************* content area *******************/
-.container.contents h2 {
-	color: #323232;
-	text-transform: none;
-	text-align: left;
-	position: relative;
-	margin-left: 30px;
-}
-.mobile-heding-div {
-	display: none;
-}
+
 .container.contents {
 	padding-top: 30px;
-}
-.container.contents h2:before {
-	content: '';
-	position: absolute;
-	bottom: -12px;
-	left: 0;
-	width: 96%;
-	height: 6px;
-	/*background: url(../images/h2_after.png) left top no-repeat;*/
-	background: #1b75bc;
-}
-.container.contents h2:after {
-	background: url(../images/header_divider_end.png) left top no-repeat;
-	width: 42px;
-	height: 6px;
-	position: absolute;
-	content: '';
-	right: -28px;
-	bottom: -12px;
 }
 aside.mainSidebar {
 	width: 25%;
@@ -730,6 +778,7 @@ section.productContent {
 	width: 75%;
 	float: left;
 	height: auto;
+	padding-bottom: 80px;
 }
 .mainSidebar .asideContainer {
 	width: 230px;
@@ -742,7 +791,7 @@ section.productContent {
 	border: 3px solid #e5e5e5;
 	padding: 27px 26px;
 	padding-bottom: 0;
-	margin-top: 97px;
+	margin-top: 0 !important;
 	margin-bottom: 53px
 }
 .main_items li {
@@ -843,7 +892,10 @@ section.productContent {
 }
 .productRowHolder {
 	width: 100%;
-	padding: 40px 30px;
+	padding: 40px 30px 40px 30px;
+}
+.productRowHolder:nth-of-type(1) {
+	padding: 0px 30px 40px 30px;
 }
 .productRow {
 	width: 100%;
@@ -870,16 +922,24 @@ section.productContent {
 	font-size: 28px;
 	text-transform: none;
 	position: relative;
+	display: inline-block
 }
-.productRow h4:after {
+.productRow h4:before {
 	content: '';
-	width: 360px;
+	width: 100%;
 	height: 6px;
 	position: absolute;
 	left: 0;
-	bottom: -16px;
-	background: url(../images/pro_head_before.png) left top no-repeat;
-	background-size: contain;
+	bottom: -12px;
+	background: #1b75bc;
+}
+.productRow h4:after {
+	background: url(../images/header_divider_end.png) no-repeat right center;
+	content: '';
+	position: absolute;
+	width: 40px;
+	height: 6px;
+	bottom: -12px
 }
 .ratingHolder {
 	position: absolute;
@@ -1115,23 +1175,12 @@ ul.featuresLi {
 	padding: 45px 0;
 	position: relative;
 	right: 0;
-	top: 135px;
 }
 .inner-container-div {
 	text-align: center;
 }
 .inner-page-heading h2 {
-	/*border-bottom: 6px solid #1b75bc;*/
 	color: #1b75bc;
-	font-family: FjallaOne-Regular;
-	font-size: 34px;
-	left: 0;
-	margin: 0 auto;
-	/*position: relative;*/
-	right: 0;
-	text-align: center;
-	/*width: 45%;*/
-	word-spacing: 0;
 }
 .inner-page-heading {
 	position: relative;
@@ -1139,35 +1188,35 @@ ul.featuresLi {
 	text-align: center;
 	width: 100%;
 }
-.inner-page-heading span {
+/*.inner-page-heading span {
 	border-bottom: 6px solid #1b75bc;
 	padding: 0 15px;
 	position: relative;
 	top: 8px;
-}
-.inner-page-heading h2::before {
+}*/
+/*.inner-page-heading h2::before {
 	background: url('../images/hading-saprater-left.png') no-repeat left bottom;
-	/*content:url('../images/hading-saprater-left.png');*/
+	content:url('../images/hading-saprater-left.png');
 	content: "";
-	/*display: block;
-    left: -42px;*/
+	display: block;
+    left: -42px;
 	position: absolute;
 	top: 54px;
 	height: 10px;
 	width: 50px;
 	margin-left: -41px;
-}
-.inner-page-heading h2::after {
+}*/
+/*.inner-page-heading h2::after {
 	background: url('../images/hading-saprater-right.png') no-repeat right bottom;
-	/*content:url('../images/hading-saprater-left.png');*/
+	content:url('../images/hading-saprater-left.png');
 	content: "";
-	/*display: block;
-    right: -37px;*/
+	display: block;
+    right: -37px;
 	position: absolute;
 	top: 54px;
 	height: 10px;
 	width: 38px;
-}
+}*/
 .priceing-div {
 	padding-top: 75px;
 }
@@ -1198,13 +1247,13 @@ ul.featuresLi {
 }
 .pricing-col-header-top h4 {
 	color: #fff;
-	font-family: Lato-Regular;
+	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 	text-transform: uppercase;
 }
 .pricing-col-header-bottom h3 {
 	color: #fff;
-	font-family: Lato-Regular;
+	font-family: 'Lato', sans-serif;
 	font-size: 27px;
 	font-weight: 700;
 	line-height: 60px;
@@ -1227,7 +1276,7 @@ ul.featuresLi {
 }
 .pricing-content li {
 	line-height: 40px;
-	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 13px;
 	transition: all .3s ease-in;
 	-webkit-transition: all .3s ease-in;
@@ -1390,14 +1439,10 @@ ul.featuresLi {
 }
 .container.contents .HeadingTestimonials h2 {
 	text-align: center;
-	font-size: 41px;
 }
-/*.container.contents .HeadingTestimonials h2:after {
-	margin: 0 auto;
-	right: 0;
-	width: 395px;
-	background: url(../images/testimonial_heading_after.png) left top no-repeat;
-}*/
+.HeadingTestimonials {
+	text-align: center
+}
 .leftDescription {
 	float: left;
 	width: 60%;
@@ -1413,6 +1458,7 @@ ul.featuresLi {
 .mainContentStart .rows {
 	padding-left: 8%;
 	padding-top: 55px;
+	padding-right: 8%
 }
 .leftDescriptionInner1 {
 	width: 100%;
@@ -1430,10 +1476,9 @@ ul.featuresLi {
 }
 .rightImagesArea {
 	float: left;
-	width: 30%;
+	width: 38%;
 	height: 320px;
 	background: red;
-	margin-left: 20px;
 	transform: skew(-29deg);
 	-webkit-transform: skew(-29deg);
 	-moz-transform: skew(-29deg);
@@ -1515,7 +1560,7 @@ ul.featuresLi {
 }
 .rowsRightCurve .rightImagesArea {
 	margin-left: 0;
-	margin-right: 20px;
+	margin-right: 13px;
 	transform: skew(29deg);
 	-webkit-transform: skew(29deg);
 	-moz-transform: skew(29deg);
@@ -1553,7 +1598,7 @@ ul.featuresLi {
 }
 .rowsRightCurve .mainContentArea {
 	padding-left: 0px;
-	padding: 35px 100px;
+	padding: 28px 100px;
 }
 .rowsRightCurve .imgLabel {
 	background: #1c76bc;
@@ -1867,39 +1912,273 @@ section.productContent h2 {
 	right: -40px;
 	top: -1px;
 }
-/* *****21_01_2017 esha ***** */
-
-.HeadingTestimonials {
-	text-align: center;
+.asideContainer.pro_cat .main_items > li {
+	border: 1px solid #e7e8ea;
+	margin-bottom: 5px;
+	padding: 0 10px;
+	background: #1f75b5;
 }
-.container.contents .HeadingTestimonials h2 {
-	display: inline-block;
+.asideContainer.pro_cat .main_items > li ul li {
+	padding: 0 !important;
 }
-.rowsleftCurve .rightImagesArea {
-	float: right;
-	width: 34%;
+.asideContainer.pro_cat .main_items > li ul li a {
+	font-size: 15px !important;
+	padding-left: 20px !important;
+	line-height: 34px !important;
+	padding: 0
 }
-.rowsleftCurve .leftDescription {
-	width: 63%;
+.asideContainer.pro_cat .main_items > li > a {
+	border-bottom: none;
+	font-size: 16px;
+	padding: 12px 0 12px 23px;
+	position: relative;
+	color: #fff
 }
-.mainContentStart .rows.rowsleftCurve {
-	padding-right: 8%;
-}
-.container.contents .HeadingTestimonials span {
-	background: url(../images/hading-saprater-left.png) left top no-repeat;
-	width: 42px;
-	height: 6px;
+.asideContainer.pro_cat .main_items > li > a:after {
+	width: 13px;
+	height: 13px;
+	background: #fff;
 	position: absolute;
 	content: '';
-	left: -39px;
-	bottom: -12px;
+	left: 4px;
+	top: 16px;
 }
-.container.contents h2.partical_bothside {
-	margin-left: 0px;
+.asideContainer.pro_cat .main_items > li.opened >a:after {
+	background: #1b75bc;
 }
-.container.contents h2.partical_bothside::after {
-	right: -36px;
+.asideContainer.pro_cat .main_items > li a i {
+	color: #fff
 }
-.container.contents h2.partical_bothside::before {
-	width: 99%;
+.asideContainer.pro_cat .main_items > li.opened {
+	background: #fff;
+	padding-bottom: 15px !important;
+}
+.asideContainer.pro_cat .main_items > li.opened > a {
+	color: #000 !important;
+	font-size: 18px;
+}
+.asideContainer.pro_cat .main_items > li.opened > a i {
+	display: none;
+}
+.asideContainer.pro_cat .main_items > li.opened ul li a {
+	color: #000;
+}
+.asideContainer.pro_cat .main_items > li.opened ul li a i {
+	color: #000;
+	text-align: right;
+	font-size: 14px;
+	float: right;
+	padding: 12px 0 12px 0;
+	margin-right: 0;
+}
+.asideContainer.pro_cat .main_items > li.opened ul li a:hover {
+	color: #1f75b5
+}
+.asideContainer.pro_cat .main_items > li.opened ul li a:hover i {
+	color: #1f75b5
+}
+.asideContainer.pro_cat .filterTopSection span.left {
+	float: left;
+}
+.asideContainer.pro_cat .filterTopSection span.right {
+	float: right;
+}
+.asideContainer.pro_cat .filterTopSection span {
+	color: #000;
+	font-size: 16px;
+	margin-top: 10px
+}
+.asideContainer.pro_cat .filterTopSection #slider {
+	margin-top: 20px
+}
+.productRowHolder .content_box .header_style {
+	width: 100%;
+	background: url(../images/shop_page_content_head.png) no-repeat center top;
+	background-size: cover;
+	height: 111px;
+	display: block;
+}
+.productRowHolder .content_box .header_style.triathlon {
+	background: url(../images/triathlon_back.png) no-repeat center top;
+}
+.productRowHolder .content_box .header_style.casual {
+	background: url(../images/casual_head_bg.jpg) no-repeat center top;
+}
+.productRowHolder .content_box .header_style.running {
+	background: url(../images/running_head_bg.jpg) no-repeat center top;
+}
+.productRowHolder .content_box .header_style.series {
+	background: url(../images/series_head_bg.jpg) no-repeat center top;
+}
+.productRowHolder .content_box .header_style .header_inner {
+	background: rgba(27,117,188,.72);
+	width: 100%;
+	height: 100%;
+	padding-left: 20px
+}
+.productRowHolder .content_box .header_style .header_inner h3 {
+	color: #fff;
+	line-height: 111px;
+	text-align: left
+}
+/*23/01/2017 Esha*/
+
+.product_area {
+	width: 100%;
+	height: auto;
+	padding: 0 30px 0px;
+}
+.product_area ul {
+	text-align: center;
+}
+.product_area ul li {
+	width: 29%;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 50px;
+	position: relative;
+}
+.product_area ul li:first-child, .product_area ul li:last-child {
+	margin: 0;
+}
+.product_area ul li .Productimg_holder {
+	border: 1px solid #dddddd;
+	transition: all .3s ease-in;
+	-webkit-transition: all .3s ease-in;
+	-moz-transition: all .3s ease-in;
+}
+.Product_description h5 {
+	font-size: 14px;
+	line-height: 20px;
+	font-weight: 400;
+	font-family: Lato;
+	color: #323232;
+}
+.Product_description {
+	width: 100%;
+	height: auto;
+	padding: 10px 0;
+	text-align: left;
+}
+.Product_description > h5 > span {
+	color: #1b75bc;
+	float: right;
+	font-size: 16px;
+	font-weight: 700;
+	font-family: Lato;
+}
+.view_button {
+	text-align: center;
+	display: block;
+	padding: 30px 0 0;
+}
+.view_button a.btn-get-started::after {
+	right: -34%;
+}
+.product_area ul li .Productimg_holder {
+	content: '';
+	width: 100%;
+	height: auto;
+	background: url(../images/shop_back.png) no-repeat;
+	background-size: contain;
+	top: 0;
+	left: 0;
+	position: relative;
+}
+.product_area > ul > li > span {
+	font-size: 16px;
+	color: #fff;
+	background: #1b76bc;
+	float: left;
+	padding: 5px 15px;
+	font-weight: 400;
+	font-family: Lato;
+	position: absolute;
+	top: 1px;
+	left: 1px;
+	z-index: 1;
+}
+.product_area > ul > li > span:after {
+	position: absolute;
+	content: '';
+	width: 38px;
+	height: 30px;
+	background: url(../images/shop_after.png) no-repeat;
+	background-size: contain;
+	top: 0;
+	right: -37px;
+}
+.Productimg_holder_hover ul li {
+	width: 45px;
+	height: 35px;
+	display: inline-block;
+	text-align: center;
+	transform: skew(-29deg);
+	-webkit-transform: skew(-29deg);
+	-moz-transform: skew(-29deg);
+	background: #fff;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 10px;
+	transition: all .3s ease-in;
+	-webkit-transition: all .3s ease-in;
+	-moz-transition: all .3s ease-in;
+}
+.Productimg_holder_hover {
+	width: 100%;
+	height: auto;
+	position: absolute;
+	background: rgba(14,35,52,.9);
+	top: 0;
+	bottom: 0;
+	padding-top: 45%;
+	opacity: 0;
+	transition: all .3s ease-in;
+	-webkit-transition: all .3s ease-in;
+	-moz-transition: all .3s ease-in;
+}
+.product_area ul li .Productimg_holder:hover .Productimg_holder_hover {
+	opacity: 1;
+}
+.Productimg_holder_hover ul li span {
+	display: block;
+	transform: skew(29deg);
+	-webkit-transform: skew(29deg);
+	-moz-transform: skew(29deg);
+}
+.Productimg_holder_hover ul li span i {
+	color: #333;
+}
+.Productimg_holder_hover ul li a {
+	display: block;
+	padding: 8px;
+	transition: all .3s ease-in;
+	-webkit-transition: all .3s ease-in;
+	-moz-transition: all .3s ease-in;
+}
+.Productimg_holder_hover ul li a:hover {
+	background: #1b75bc;
+}
+.Productimg_holder_hover ul li a:hover i {
+	color: #fff;
+}
+.Productimg_holder_hover > ul > li span::after {
+	display: none;
+}
+/*24/01/2017 Esha*/
+.shop .productContent h2.page_header_underline {
+	text-transform: uppercase;
+	font-size: 2.563rem;
+}
+.shop .asideContainer.pro_cat .filterTopSection {
+	border: 0px;
+}
+/*_____________________ Testimonials _____________________________*/ 
+
+.rowsleftCurve .rightImagesArea {
+	float: right;
+	margin-right: 7px;
+}
+.mobile-heading {
+	display: none;
 }
