--- a/ascend/css/custom.css
+++ b/ascend/css/custom.css
@@ -2182,3 +2182,137 @@ section.productContent h2 {
 .mobile-heading {
 	display: none;
 }
+
+/*_____________________________ Ranit 4-2-17 for  portfolio page________________________________________*/ 
+
+#portfolio #page_header .left_align_head h2{
+	text-transform: none;
+	border-bottom: 6px solid #1b75bc;
+	margin-left: 60px !important;
+}
+#portfolio #page_header .left_align_head h2:after{
+	background: url(../images/header_divider_end.png) left top no-repeat;
+	width: 42px;
+	height: 6px;
+	position: absolute;
+	content: '';
+	left: 100%;
+	top: 100%;
+	
+}
+#portfolio #page_header .left_align_head h2:before{
+	background: url(../images/header_divider_start.png) left top no-repeat;
+	width: 42px;
+	height: 6px;
+	position: absolute;
+	content: '';
+	left: -8%;
+	top: 100%;
+}
+.selectHolder{
+	width: 136px;
+	height: 36px;	
+	margin: 0 0 auto auto;
+	position: relative;
+}
+.selectHolder i{
+	position: absolute;
+	top: 34%;
+	right: 15px;
+	cursor: pointer;
+}
+.selectHolder select{
+	width: 100%;
+	height: 100%;
+	border: 1px solid #c5c5c5;
+	-webkit-appearance : none;
+   -moz-appearance : none;
+   appearance: none;
+   cursor: pointer;
+}
+.SelectFilter{
+	padding-right: 30px;
+	margin-top: -40px;
+	margin-bottom: 27px;
+}
+#portfolio .porfolioFilter{
+	width: 100%;
+	height: auto;
+	border: 2px solid #ddd;
+}
+.TagHolder{
+	padding: 15px;
+}
+.TagHolder{
+	text-align: justify;
+}
+.TagHolder a{
+	display: inline-block;
+	padding: 5px 8px;
+	background: #ededed;
+	border: 1px solid #cccccc;
+	margin: 3px 0;
+	color: #424242;
+	transition: all .3s ease-in;
+	-webkit-transition: all .3s ease-in;
+	-moz-transition: all .3s ease-in;
+	-ms-transition: all .3s ease-in;
+	-o-transition: all .3s ease-in;
+}
+.TagHolder a.currrent{
+	background: #1b75bc;
+	color: #fff;
+}
+.TagHolder a:hover{
+	background: #1b75bc;
+	color: #fff;
+}
+#portfolio .asideContainer h5{
+	font-family: 'Lato', sans-serif;
+	margin-top: -25px;
+	margin-bottom: 25px;
+}
+#portfolio .product_area > ul > li > span{
+	background: #ff8c00;
+	right: 1px;
+	left: inherit;
+	color: #1d1d1d;
+	font-size: 13px;
+}
+#portfolio .product_area > ul > li > span::after {
+    position: absolute;
+    content: '';
+    width: 0px;
+    height: 0px;
+    background: url(../images/profile_shop_after_sapn.png) no-repeat;
+    background-size: contain;
+    top: 0;
+    left: -32px;
+    border-left: 32px solid transparent;
+	border-right: 0px solid transparent;
+	border-top: 26px solid #ff8c00;
+}
+#portfolio .Productimg_holder{
+	padding: 35px;
+	max-height: 275px;
+}
+#portfolio .Productimg_holder_hover{
+	left: 0;
+}
+
+#portfolio .product_area ul li {
+    width: 31%;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 22px;
+    position: relative;
+}
+#portfolio .product_area ul li:first-child, #portfolio .product_area ul li:last-child{
+	margin: 0;
+}
+#portfolio .product_area{
+	margin-top: 30px;
+}
+#portfolio .product_area:first-child{
+	margin-top: 0;
+}
